--- a/apps/sandbox/index.html
+++ b/apps/sandbox/index.html
@@ -24,6 +24,12 @@
         }
       })();
     </script>
+    <script type="module">
+      // Auto-initialize UIFork in development
+      if (import.meta.env.DEV) {
+        import("uifork/auto-init");
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
