Inject styles in auto-init

--- a/apps/sandbox/index.html
+++ b/apps/sandbox/index.html
@@ -24,10 +24,8 @@
       })();
     </script>
     <script type="module">
-      // Auto-initialize UIFork in development
-      if (import.meta.env.DEV) {
-        import("uifork/auto-init");
-      }
+      // Auto-initialize UIFork
+      import("uifork/auto-init");
     </script>
   </head>
   <body>
